Fri Jun 09 13:51:03 BST 2006  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Add note that FLAG_WILDCARD requires
	  you to call set_database.

Fri Jun 09 13:49:34 BST 2006  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc: Don't compile query serialisation if the
	  remote backend is disabled.

Fri Jun 09 01:48:25 BST 2006  Olly Betts <olly@survex.com>

	* api/omdocument.cc,tests/api_nodb.cc: add_value failed to replace an
	  existing value with the same number, contrary to what the
	  documentation says (bug #82).

Thu Jun 08 21:36:54 BST 2006  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Don't fetch the document data when fetching
	  the value to sort on.  Simple benchmarking showed this to speed
	  up sort by value by a factor of between 3 and 9!

Sun Jun 04 17:36:01 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/: Remove forced flush when iterating the posting list
	  of a term which has modified posting pending.

Sat Jun 03 21:38:43 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc,backends/flint/flint_termlist.cc,
	  backends/quartz/quartz_database.cc,tests/api_wrdb.cc: We can't flush
	  during a transaction, which means that we can't use flush to avoid
	  having to handle corner cases (like deleting a document right after
	  adding it before it's been flushed) so handle corner cases properly
	  (except for postlist_begin() and allterms_begin() which are
	  harder - these now throw UnimplementedError at least...)
	* backends/flint/flint_database.cc,backends/quartz/quartz_database.cc:
	  replace_document(did, doc) was double-incrementing the "changes"
	  counter when document did didn't exist - fixed.

Sat Jun 03 17:53:41 BST 2006  Olly Betts <olly@survex.com>

	* HACKING: Document "make check-flint" and "make check-quartz".

Sat Jun 03 17:49:25 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,tests/Makefile.am: Added make targets "check-flint" and